test: Controller layer implemented and TDD implemented.